src/components/PiPRecordButton/PiPRecordButton.module.css
/*
  Needs to be nested to get a higher specificty
  than MUI icon button styles
 */
.root:global(.MuiIconButton-root) {
  grid-area: 1/1;
  align-self: end;
  justify-self: center;
  margin-bottom: 12px;
  width: 46px;
  height: 46px;

  &.countingDown {
    transition: border-color 300ms ease-in;
    border-color: transparent;
    pointer-events: none;
  }
}

.countingDown .icon {
  display: grid;
  place-content: center;
  animation: 3.25s linear 400ms icon-out;
  font-family: Gilroy, Arial, sans-serif;
  font-size: 16px;
  font-weight: 700;

  &::after {
    animation: 4s linear -350ms countdown-content,
      4s linear -350ms countdown-in-out;
    content: '';
  }
}

@keyframes countdown-content {
  0% {
    animation-timing-function: step-end;
    content: '3';
  }

  45% {
    animation-timing-function: step-end;
    content: '2';
  }

  70% {
    animation-timing-function: step-end;
    content: '1';
  }
}

@keyframes countdown-in-out {
  0% {
    opacity: 0;
  }

  20% {
    transform: scale(0.8);
    opacity: 0;
    animation-timing-function: ease;
  }

  25% {
    transform: scale(1.4);
    opacity: 1;
    animation-timing-function: ease;
  }

  30% {
    transform: scale(1);
  }

  40% {
    transform: scale(1);
    opacity: 1;
    animation-timing-function: ease-in;
  }

  45% {
    transform: scale(0.8);
    opacity: 0;
    animation-timing-function: ease;
  }

  50% {
    transform: scale(1.4);
    opacity: 1;
    animation-timing-function: ease;
  }

  55% {
    transform: scale(1);
  }

  65% {
    transform: scale(1);
    opacity: 1;
    animation-timing-function: ease-in;
  }

  70% {
    transform: scale(0.8);
    opacity: 0;
    animation-timing-function: ease;
  }

  75% {
    transform: scale(1.4);
    opacity: 1;
    animation-timing-function: ease;
  }

  80% {
    transform: scale(1);
  }

  85% {
    transform: scale(1);
    opacity: 1;
    animation-timing-function: ease-in;
  }

  95% {
    transform: scale(0.8);
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

@keyframes icon-out {
  0% {
    animation-timing-function: ease;
  }

  4.6% {
    box-shadow: 0 0 0 12.5px rgb(var(--mui-palette-primary-mainChannel) / 40%);
  }

  90% {
    transform: scale(1);
    opacity: 1;
    box-shadow: 0 0 0 12.5px rgb(var(--mui-palette-primary-mainChannel) / 40%);
    animation-timing-function: ease-in;
  }

  95% {
    box-shadow: 0 0 0 32px rgb(var(--mui-palette-primary-mainChannel) / 0%);
  }

  100% {
    transform: scale(10);
    opacity: 0;
  }
}

